--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,41 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif !important;
+
+  font-size: 15px;
+}
+input,select,textarea{
+  min-height: 45px !important;
+  border: 1px solid #b9b9b9 !important;
+  width: 100% !important;
+}
+input:focus,textarea:focus,select:focus{
+  outline: none !important;
+  border: 1px solid #6a6a6a !important;
+  box-shadow: none !important;
+}
+button{
+  height: 45px !important;
+box-shadow: none !important;
+}
+table{
+  border: #bbb8b8 1px solid !important;
+  border-radius: 2px;
+}
+i{
+  font-size: 20px !important;
+}
+/* new */
 body {
   margin: 0;
-  background-image: linear-gradient(to bottom right, #54617b, #191e28);
-  background-repeat: no-repeat;
+  /* background-image: linear-gradient(to bottom right, #54617b, #191e28);
+  background-repeat: no-repeat; */
   margin: 0;
   width: 100%;
   background-attachment: fixed;
@@ -15,7 +49,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 .App {
+  background-image: linear-gradient(to bottom right, #54617b, #191e28);
+  background-repeat: no-repeat;
   background-color: none;
   display: grid;
   align-items: center;
@@ -148,7 +185,7 @@ a {
   text-decoration: none;
 }
 
-/* sofia*/
+
 li {
   list-style-type: none;
   margin-bottom: 10px;
@@ -175,10 +212,6 @@ textarea:focus {
   outline: none;
 }
 
-h1 {
-  margin: 50px;
-  font-size: 40px;
-}
 
 .form {
   display: grid;
@@ -237,3 +270,108 @@ h1 {
   text-transform: none;
   width: fit-content;
 }
+.home{
+background-color: black;
+
+}
+/* home page css */
+/* styles.css */
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #f2f2f2;
+  text-align: center;
+  padding: 50px;
+}
+
+h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+h1.click-message {
+  font-size: 24px;
+  color: #007bff;
+  margin-top: 20px;
+}
+
+#features ul {
+  text-align: left;
+  color: white;
+}
+
+.testimonial {
+  margin-bottom: 20px;
+  color: white;
+}
+
+.customer {
+  font-style: italic;
+}
+
+footer {
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+}
+.click{
+  color: blue;
+}
+.h2-1{
+  font-size: 25px;
+    letter-spacing: -0.04em;
+    line-height: 46px
+
+}
+/* style for css */
+
+.general-page {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.general-page__heading {
+  font-size: 32px;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.general-page__text {
+  margin-bottom: 10px;
+  color: #555;
+}
+
+.general-page__section {
+  margin-bottom: 30px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.general-page__section-heading {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.general-page__list {
+  margin-left: 20px;
+  color: #666;
+}
+
+.general-page__list li {
+  margin-bottom: 5px;
+}
+
+/* Additional styles can be added as needed */
